# sigma-case

./: README.md  Sigma_Case.postman_collection.json  compose.yml  make_env.sh
.devcontainer/: devcontainer.json
client/: package.json
client/app/: globals.css  layout.tsx  page.tsx
client/app/actions/: auth.ts  map.ts  products.ts
client/app/dashboard/: page.tsx
client/app/ui/: dashboard.tsx  map.tsx  maps.tsx  products.tsx  signin_form.tsx  signup_form.tsx  soil_usage.tsx  transactions.tsx
client/utils/: token.ts
server/: Dockerfile  pyproject.toml
server/server/: main.py
server/server/database/: __init__.py
server/server/endpoints/: __init__.py  authenticate.py
server/server/endpoints/secured/: __init__.py  map.py  products.py
server/server/exceptions/: __init__.py
server/server/mock/: __init__.py
server/server/models/: __init__.py  base.py  geo_feature.py  map.py  product.py  users.py
server/server/myjwt/: __init__.py
server/server/repository/: __init__.py  map.py  products.py  test_products.py  test_users.py  users.py
